Fix checkout screen overflowing horizontally

--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -87,12 +87,6 @@
   }
 }
 
-@media screen and (min-width: 39em) and (max-width: 40em) {
-  .flexRow--checkoutContainer {
-    width: 37rem;
-  }
-}
-
 /* M */
 @media only screen and (min-width: 40em) {
   .flexCol--itemsSummary {
